INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/src
)

FUNCTION(PLUGIN PLUGIN_NAME)
	SET(TARGET ${PLUGIN_NAME}_cpu)
	ADD_LIBRARY(${TARGET} SHARED ${PLUGIN_NAME}.cpp)
	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES OUTPUT_NAME ${PLUGIN_NAME})
	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES DEFINE_SYMBOL NEMO_PLUGIN_EXPORTS)
	INSTALL(TARGETS ${TARGET} DESTINATION ${NEMO_SYSTEM_PLUGIN_DIR}/cpu)
	TARGET_LINK_LIBRARIES(${TARGET} nemo_base)
ENDFUNCTION(PLUGIN)

PLUGIN(Input)
PLUGIN(PoissonSource)
PLUGIN(Izhikevich)
PLUGIN(Kuramoto)

# Plugins which rely on separate excitatory and inhibitory currents are only
# valid if we do indeed keep these separate.
IF(NOT NEMO_SINGLE_CURRENT)
	PLUGIN(IF_curr_exp)
ENDIF(NOT NEMO_SINGLE_CURRENT)
